May 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix LAN Browsing for games that need a port change (Rune)
- replaced static struct for q3 options with a more flexible g_datalist
- added preferences tab for q3 memory settings
- renamed STVEFS to EFS to match qstat beta, old servers need to be renamed by
  hand else they will get lost
- added master server preferences tab for voyager elite force (req upcoming
  qstat)
- updated german translation

Apr 23, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- acconfig.h seems to be deprecated, moved it to i18n.h
- removed explicit -I/usr/include as gcc3 doesn't like that

Apr 20, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation

Mar 17, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added navy seals gametype
- added RTCW protocol 58 to preferences
- added a server_unref so old servers no longer pile up in srvinfo.gz
- added player statistics per OS
- updated german translation

Feb 28, 2002: Jordi Mallach <jordi@sindominio.net>
- updated copyright notice in about dialog
- updated Spanish translation.

Feb 17, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- support for LAN broadcast queries

Feb 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- check for correct version of qstat on startup

Feb 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- reworked dialog for adding master
- added popup menu for master server tree
- added function for renaming master servers

Feb 01, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix display of gametypes > MAX_Q3A_TYPES

Jan 17, 2002: Jordi Mallach <jordi@sindominio.net>
- updated NEWS for 0.9.9.

Jan 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- removed not working Tribes2 masterservers and added a new one
- wrote new function for parsing Tribes2 player info
- changed version to 0.9.9b

Jan  2, 2002: Jordi Mallach <jordi@sindominio.net>
- Spanish update

Dec 30, 2001: Ludwig Nussel <l-n@users.sourceforge.net>